<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.4">
  <DUT Name="T_Type" Id="{6586d12d-6f2c-0f59-00c5-531d107ef0be}">
    <Declaration><![CDATA[TYPE T_Type : __SYSTEM.TYPE_CLASS; END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>